  TaskScheduler.setInterval() synchronization bug fixed
  TaskScheduler no longer started on construction, start() returns instance to facilitate startup on construction
  Events.EventObserverImpl redundant synchronization removed
  TaskSchedulerTest added
  TaskSchedulerTest improved
  ConnectionPoolMonitorPanel, fine grained statistics checkbox moved
  EntityServerMonitorPanel bug fixed, JDK_PREFERENCE_KEY was too long
  LoadTest, MethodLogger and related classed moved to common.model.tools
  ItemRandomizerPanel and LoadTest panel moved to common.ui.tools
  DefaultEntityTableModel.doRefresh() now performs the query before clearing the model, so that exceptions during refresh do not result in an empty model
  DefaultEntityTableModel.getValue() added, allows the overriding of the getValueAt() mechanism
  EntityConnectionServer, constructor now handles errors and un-exports the server
  EntityConnectionServerAdminImpl, constructor now handles errors and un-exports the server admin
  Entity.BackgroundColorProvider.getBackgroundColor() now returns Object instead of java.awt.Color to get rid of awt dependency
  Configuration.INVALID_VALUE_BACKGROUND_COLOR removed, unused
  EntityConnectionServer, domainModelClassNames, loginProxyClassNames, initialPoolUsers, webDocumentRoot, webServerPort and clientLoggingEnabled added as constructor parameters
  EntityConnectionServer.logShutdownAndReturn() added and used
  Configuration.DEFAULT_HORIZONTAL_AND_VERTICAL_COMPONENT_GAP removed
  Configuration.DEFAULT_LOOK_AND_FEEL_CLASSNAME removed, Configuration no longer depends on UiUtil
0.6.7
  Entity.KeyGenerator added, implementations added to EntityDefinitionImpl, factory methods to Entities
  IdSource removed
  EntityTableCellRenderer refactored
  TextValueLink.NullFormat moved to Util
  PropertyImpl.setFormat() no longer accepts null values
  PropertyImpl.initializeDefaultFormat() returns Util.NullFormat by default
  TristateValueLink now extends BooleanValueLink